-fixing footer bugs on mobile view

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -986,4 +986,8 @@ footer
         font-size: 1.4rem;
     }
 
+    .copyright span, a {
+        margin: 0.5rem;
+        font-size: 1.2rem;
+    }
 }
